src/main/java/com/example/choose_one/common/error/ErrorCodeIfs.java
package com.example.choose_one.common.error;

public interface ErrorCodeIfs {
    Integer getHttpStatusCode();
    Integer getErrorCode();
    String getDescription();
}
